--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-hello world
+<!DOCTYPE html>
+<html>
+<title>
+    THE BEARCAT SHOP
+</title>
+
+<header>
+    <link rel="stylesheet" href="styles.css">
+    <ul>
+        <span>THE BEARCAT SHOP</span>
+        <a href="Home.html">
+            <li>Home</li>
+        </a>
+        <a href="New.html">
+            <li>New</li>
+        </a>
+        <a href="Sale.html">
+            <li>Sale</li>
+        </a>
+        <a href="OutofStock.html">
+            <li>OutofStock</li>
+
+            <a href="Contact.html">
+                <li>Contact</li>
+            </a>
+    </ul>
+</header>
+
+<body>
+    <div id="itemContainer">
+        <div id="New">
+            NEW!
+        </div>
+        <img id="itemimage" src="BEARCAT CANDLE.png" alt="Description of image">
+        <button>
+            <b>
+                $9.99
+            </b>
+        </button>
+    </div>
+
+    <div id="itemContainer">
+        <div id="Sale">
+            SALE!
+        </div>
+        <img id="itemimage2" src="BEARCAT PENCIL.png" alt="Description of image">
+        <button>
+            <b>
+                $4.99
+            </b>
+        </button>
+    </div>
+
+    <div id="itemContainer">
+        <img id="itemimage" src="HERSHEY BAR.png" alt="Description of image">
+        <button>
+            <b>
+                $1.50
+            </b>
+        </button>
+    </div>
+
+    <div id="itemContainer2">
+        <div id="OutofStock">
+            OutofStock
+        </div>
+        <img id="itemimage2" src="BEARCAT PENCIL 2.png" alt="Description of image">
+    </div>
+</body>
+
+</html>
